# imsettings

./: Makefile  README.md  imsettings-1.6.3-translations-update.patch  imsettings-713433-mem-corrupt.patch  imsettings-dont-set-envvar-on-unsupported-desktop.patch  imsettings-fix-assertion-in-gio.patch  imsettings-fix-memleak-and-crash.patch  imsettings-fix-unbound-variable.patch  imsettings-imsettings-reload-locale.patch  imsettings-rebase-gnome.patch  imsettings-xinput-xcompose.patch  imsettings.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  imsettings-uninstalled.pc  imsettings-uninstalled.pc.in  imsettings.pc  requires
src/applet/: Makefile.in
src/backends/: Makefile.am  Makefile.in
src/backends/gconf/: Makefile.am  Makefile.in  gconf-imsettings-glue.h  gconf-module.c
src/backends/gsettings/: Makefile.am  Makefile.in  gsettings-module.c
src/backends/lxde/: Makefile.am  Makefile.in  lxde-imsettings-glue.h  lxde-module.c
src/backends/mate-gsettings/: Makefile.am  Makefile.in  mate-gsettings-module.c
src/backends/mateconf/: Makefile.am  Makefile.in  mateconf-module.c
src/backends/qt/: Makefile.am  Makefile.in  moc_qt-imsettings-glue.cpp  moc_qt-imsettings.cpp  qt-imsettings-glue.cpp  qt-imsettings-glue.h  qt-module.c
src/backends/xfce/: Makefile.am  Makefile.in  xfce-module.c
src/backends/xfce_mcs/: Makefile.in
src/backends/xfce_xfconf/: Makefile.in
src/backends/xim/: Makefile.am  Makefile.in  client.c  client.h  compose.c  compose.h  loopback.c  loopback.h  main.c  proxy.c  proxy.h  utils.c  utils.h  xim-module.c
src/data/: Makefile.am  Makefile.in  imsettings-functions.in  imsettings-target-checker.sh.in  xim.in.in  xinput.sh.in.in  xinputinfo.sh.in
src/docs/: Makefile.am  Makefile.in  imsettings-docs.sgml  imsettings-sections.txt  imsettings.types  xinput.sgml
src/docs/html/: annotation-glossary.html  api-index-full.html  ch01.html  ch02.html  imsettings-IMSettingsClient.html  imsettings-IMSettingsInfo.html  imsettings-Macros.html  imsettings-Utilities.html  imsettings.devhelp2  index.html  index.sgml  object-tree.html  xinput.html
src/docs/tmpl/: imsettings-client.sgml  imsettings-info.sgml  imsettings-utils.sgml  imsettings.sgml
src/imsettings/: Makefile.am  Makefile.in  imsettings-client.c  imsettings-client.h  imsettings-glib-bindings.h  imsettings-glib-glue.h  imsettings-info.c  imsettings-info.h  imsettings-marshal.c  imsettings-marshal.h  imsettings-private.h  imsettings-utils.c  imsettings-utils.h  imsettings.h
src/imsettings-daemon/: Makefile.am  Makefile.in  imsettings-marshal.c  imsettings-marshal.h  imsettings-module.c  imsettings-module.h  imsettings-proc.c  imsettings-proc.h  imsettings-server.c  imsettings-server.h  main.c
src/po/: LINGUAS  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  (+47 more)
src/src/: Makefile.in
src/tests/: Makefile.am  Makefile.in  gcit_11.c  imsettings-info.c  main.c  main.h  rhbz_431291.c  rhbz_453358.c  rhbz_455363.c  rhbz_471833.c  rhbz_490587.c  rhbz_510666.c  rhbz_514852.c  rhbz_523349.c  rhbz_526205.c  rhbz_599924.c
src/tests/testcases/: Makefile.am  Makefile.in
src/utils/: Makefile.am  Makefile.in  imsettings-check.c  imsettings-info.1  imsettings-info.1.xml  imsettings-info.c  imsettings-list.1  imsettings-list.1.xml  imsettings-list.c  imsettings-reload.1  imsettings-reload.1.xml  imsettings-reload.c  imsettings-switch.1  imsettings-switch.1.xml  imsettings-switch.c
